# fastapi-sqlalchemy-pytest

./: .gitignore  .tool-versions  README.md  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 3119d180193f_adding_user_model.py
app/: __init__.py  config.py  models.py
app/services/: database.py
app/views/: user.py
tests/integration/: conftest.py  test_create_user.py
